--- a/index.html
+++ b/index.html
@@ -5,23 +5,44 @@
   <title>Deno+Hono+HTMX</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script src="https://unpkg.com/htmx.org@1.9.5"
     integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO"
     crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/htmx.org/dist/ext/class-tools.js"></script>
+
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class>
   <script>
     function w3_open() {
-      document.getElementById("left-sidebar").style.display = "block";
-      // document.getElementById("topbarId").style.marginLeft = "10%";
+      // document.getElementById("right-sidebar").style.display = "block";
+      let sidebar = document.getElementById("right-sidebar");
+      sidebar.classList.remove("w3-hide");
+
+      // INFO: animation recalc
+      let main = document.body.querySelector(".w3-main");
+      main.classList.remove("w3-animate-left")
+      main.offsetWidth
+      main.style.paddingRight = "30%";
+      main.classList.add("w3-animate-right")
     }
 
     function w3_close() {
       // document.getElementById("topbarId").style.marginLeft = "0px";
-      document.getElementById("left-sidebar").style.display = "none";
+      let input_form = document.getElementById("search-input");
+      let element = document.getElementById("right-sidebar");
+      element.classList.toggle("w3-hide");
+      input_form.value = null;
+      let main = document.body.querySelector(".w3-main");
+      // main.style.marginRight = "0";
+      main.classList.remove("w3-animate-right")
+      main.offsetWidth
+      main.style.paddingRight = "0";
+      main.classList.add("w3-animate-left")
+      // document.getElementById("left-sidebar").style.display = "none";
     }
   </script>
 
@@ -31,26 +52,35 @@
       <!--   hx-swap="innerHTML" onclick="w3_open()">&#9776;</a> -->
       <a href="#" class="w3-bar-item w3-button">Home</a>
       <a href="#" class="w3-bar-item w3-button">Link 2</a>
-      <form name="q" class="search-bar" hx-post="/search" hx-prompt="Search.." hx-swap="outerHTML">
-        <input type="submit" class="w3-bar-item w3-button w3-green w3-right">
-        <input type="search" class="w3-bar-item w3-input w3-right" placeholder="Search..">
+      <!-- hx-post="/search" hx-prompt="Search.." hx-swap="outerHTML" -->
+      <form hx-boost="true" hx-get="/search" hx-target="#search-result" hx-swap="innerHTML"
+        hx-on::after-request="w3_open()" class="search-bar">
+        <button type="submit" class="w3-bar-item w3-button w3-light-blue w3-right">Поиск</button>
+        <input type="search" name="q" id="search-input" class="w3-bar-item w3-input w3-right w3-light-gray"
+          placeholder="Search..">
       </form>
     </div>
   </header>
 
-  <div class="w3-row" style="margin-top:3em;">
-    <div class="w3-quater w3-sidebar w3-grey w3-border-right " id="left-sidebar" hx-trigger="load" hx-get="/left">
-    </div>
-    <div class="w3-hide w3-rest w3-light-blue w3-sidebar w3-border-left " id="right-sidebar" style="right:0"
-      hx-trigger="load" hx-get="/right">
-    </div>
-
-    <!-- INFO: central content -->
-    <div class="w3-hide" hx-trigger="load" hx-get="/content" hx-swap="outerHTML">
-    </div>
+  <div class="w3-sidebar w3-stretch w3-pale-blue w3-border-right" style="width: 10%;" id="left-sidebar"
+    hx-trigger="load" hx-get="/left">
   </div>
 
+  <div class="w3-sidebar w3-container w3-animate-right w3-hide w3-pale-blue w3-border-left" id="right-sidebar"
+    style="right:0;width: 30%;">
+    <div hx-on:click="w3_close()" class="w3-button w3-display-topleft w3-container w3-hover-red">&times;</div>
+    <div id="search-result" class="w3-panel w3-margin-top"></div>
+  </div>
 
+  <div class="w3-row-padding w3-main w3-mobile " style="margin-top:3em;margin-left: 10%;">
+    <!-- INFO: central content -->
+    <div class="w3-col w3-center" style="" hx-trigger="load" hx-get="/content" hx-swap="innerHTML">
+    </div>
+    <!-- <div class="w3-container w3-animate-right w3-hide w3-rest w3-light-blue w3-sidebar w3-border-left " id="right-sidebar" -->
+    <!--   style="right:0"> -->
+    <!-- </div> -->
+
+  </div>
 
 </body>
 
