--- a/static/rightbar.html
+++ b/static/rightbar.html
@@ -1,4 +1,4 @@
-<div class="w3-rest w3-light-blue w3-sidebar w3-border-left " id="search-results" style="right:0">
+<div class="w3-margin-top w3-rest w3-light-blue w3-sidebar w3-border-left " i d="search-results" style="right:0">
   <!--   <ul class="w3-ul w3-hoverable"> -->
   <!--     <li><a href="#" class="w3-bar-item w3-button">Link 1</a> -->
   <!--     </li> -->
