--- a/static/leftbar.html
+++ b/static/leftbar.html
@@ -1,12 +1,13 @@
 <!-- <button class="w3-bar-item w3-button w3-hide-large" style="visibility: block;" onclick="w3_close()">Close -->
 <!--   &times;</button> -->
-<div>
+<div hx-get="/red/status" hx-on="load">
   <ul class="w3-ul w3-hoverable">
-    <li><a href="#" class="w3-bar-item w3-button">Link 1</a>
+    <!-- <li><a  hx-post="/switch/db3808af61335a31"  class="w3-bar-item w3-button">включить щ -1.6</a> -->
+    <li><a  hx-post="/red/switch/-1.6"  class="w3-bar-item w3-button">включить щ -1.6</a>
     </li>
-    <li><a href="#" class="w3-bar-item w3-button">Link 2</a>
+    <li><a  hx-post="/red/switch/1.6"  class="w3-bar-item w3-button">включить щ 1.6</a>
     </li>
-    <li><a href="#" class="w3-bar-item w3-button">Link 3</a>
+    <li><a  hx-post="/red/switch/2.6"  class="w3-bar-item w3-button">включить щ 2.6</a>
     </li>
   </ul>
 </div>
