--- a/static/leftbar.html
+++ b/static/leftbar.html
@@ -1,13 +1,6 @@
-<!-- <button class="w3-bar-item w3-button w3-hide-large" style="visibility: block;" onclick="w3_close()">Close -->
-<!--   &times;</button> -->
-<div hx-get="/red/status" hx-on="load">
-  <ul class="w3-ul w3-hoverable">
-    <!-- <li><a  hx-post="/switch/db3808af61335a31"  class="w3-bar-item w3-button">включить щ -1.6</a> -->
-    <li><a  hx-post="/red/switch/-1.6"  class="w3-bar-item w3-button">включить щ -1.6</a>
-    </li>
-    <li><a  hx-post="/red/switch/1.6"  class="w3-bar-item w3-button">включить щ 1.6</a>
-    </li>
-    <li><a  hx-post="/red/switch/2.6"  class="w3-bar-item w3-button">включить щ 2.6</a>
-    </li>
-  </ul>
+<div id="room06" hx-get="/red/switch/-1.6" hx-swap="innerHTML" ws-send hx-params="1.6" hx-trigger="ws:message"> 
+</div>
+<div id="room16" hx-get="/red/switch/1.6" hx-swap="innerHTML" ws-send hx-params="1.6" hx-trigger="ws:message">
+</div>
+<div id="room26" hx-get="/red/switch/2.6" hx-swap="innerHTML" ws-send hx-params="1.6" hx-trigger="ws:message">
 </div>
