added: svg for future

--- a/static/leftbar.html
+++ b/static/leftbar.html
@@ -1,6 +1,6 @@
-<div name="-1.6" id="room06" hx-swap="innerHTML" ws-send hx-vals='{"msg" : "sync"}' hx-get="/test" hx-trigger="htmx:wsOpen">
+<div name="-1.6" id="room06" hx-swap="innerHTML" ws-send hx-vals='{"msg" : "sync"}'  hx-trigger="load delay 1s">
 </div>
-<div name="1.6" id="room16" hx-swap="innerHTML" ws-send  hx-vals='{"msg" : "sync"}' hx-trigger="htmx:wsOpen, changed  delay:2s">
+<div name="1.6" id="room16" hx-swap="innerHTML" ws-send  hx-vals='{"msg" : "sync"}' hx-trigger="load delay 1s">
 </div>
-<div name="1.6" id="room26" hx-swap="innerHTML" ws-send  hx-vals='{"msg" : "sync"}' hx-trigger="htmx:wsOpen, setteled">
+<div name="2.6" id="room26" hx-swap="innerHTML" ws-send  hx-vals='{"msg" : "sync"}' hx-trigger="load delay 1s">
 </div>
