--- a/static/content.html
+++ b/static/content.html
@@ -1,8 +1,4 @@
-<!-- <div class="w3-content w3-container w3-section"> -->
-<article class="w3-center w3-container ">
-  <div class="w3-auto w3-article">test item article</div>
-  <div class="w3-auto w3-article">test item article</div>
-  <div class="w3-auto w3-article">test item article</div>
-  <div class="w3-auto w3-article">test item article</div>
-</article>
-<!-- </div> -->
+<div class="w3-content w3-container w3-section">
+<!-- <article class="w3-center w3-container "> -->
+<!-- </article> -->
+</div>
