--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
             <a href="#" class="w3-bar-item w3-button">Link 2</a>
             <!-- hx-post="/search" hx-prompt="Search.." hx-swap="outerHTML" -->
             <div class="w3-right w3-container">
-                <form hx-indicator="#indicator" hx-boost="true" hx-get="/search" hx-target="#search-result"
-                    hx-trigger="submit" hx-swap="innerHTML" hx-on::after-request=" w3_open()"
-                    class="search-bar w3-right">
+                <form hx-indicator="#indicator" hx-get="/search" hx-target="#search-result" hx-trigger="submit"
+                    hx-swap="innerHTML" hx-on::after-request=" w3_open()" class="search-bar w3-right">
                     <button type="submit" class="w3-bar-item w3-text-light-gray w3-button w3-light-blue w3-opacity"
                         hx-indicator="#indicator" data-loading-disable>
                         Go
@@ -81,42 +80,17 @@
     <div class="w3-sidebar w3-container w3-animate-right w3-hide w3-pale-blue w3-border-left" id="right-sidebar"
         style="right:0;width: 30%;">
         <div hx-on:click="w3_close()" class="w3-button w3-display-topleft w3-container w3-hover-red">&times;</div>
-        <div id="search-result" class="w3-panel w3-margin-top"></div>
+        <div hx-swap-oob=true id="search-result" class="w3-panel w3-margin-top"></div>
     </div>
 
-    <div class="w3-row-padding w3-main" style="margin-top:3em;margin-left: 15%;height: 94vh;"
-            hx-trigger="load" hx-get="/content" hx-swap="innerHTML">
+    <div id="canvas" class="w3-row-padding w3-main" style="margin-top:3em;margin-left: 15%;height: 94vh;"
+        hx-trigger="load" hx-get="/svg" hx-swap="innerHTML">
         <!-- INFO: central content -->
         <!-- <div class="w3-col w3-center" style="height:100%;" hx-trigger="load" hx-get="/content" hx-swap="innerHTML"> -->
-        </div>
-
     </div>
-    <script>
-// document.addEventListener('htmx:wsConnecting', function (event) {
-//   console.log("Connecting to nodered");
-// });
-//
-// function closeWebSocket() {
-//   var ws = document.getElementById("left-sidebar").ws;
-//   ws.close();
-// }
-//
-// document.addEventListener("htmx:wsOpen", function(event) {
-//   // sends sync event to timers after opening socket 
-//   console.log("OPENED");
-//   // var socket = event.detail.socketWrapper;
-//   // socket.send('{"msg":"sync","all":"true"}',event.detail.elt);
-// });
-//
-// document.addEventListener('htmx:wsError', function (event) {
-//   console.error('WebSocket connection error:', event.detail.elt);
-// });
-//
-// document.addEventListener("htmx:wsBeforeMessage", (event)=>{
-//   // console.log(event.detail.message);
-// });
-    </script>
 
+
+    <script src="/public/map.js" type=module></script>
 </body>
 
 </html>
