--- a/static/header.html
+++ b/static/header.html
@@ -1,4 +1,4 @@
-<div class="w3-row">
+<div class="w3-row" style="min-height:32px;max-height:4%;">
   <div class="w3-col m3 w3-bar-item">
     <a href="#" class="w3-button ">Home</a>
     <div class="w3-tag">
